--- a/public/html/index.html
+++ b/public/html/index.html
@@ -56,7 +56,7 @@
       <div class="row align-items-center" style="height:90%">
         <div class="col-lg-6 wow fadeInUp">
           <div class="badge badge-soft mb-2">Available Now on iOS</div>
-          <h1 class="mb-4 fw-normal">Make Investing Easy</h1>
+          <h1 class="mb-4 fw-normal">Invest Like a Pro</h1>
           <p class="mb-4">Stoccon is a mobile app that helps you track stock perfomance and analyze the quality of your investments. 
             Build a watchlist, view charts and news, see what the experts are thinking, leverage deep learning, and more.
           </p>
@@ -121,6 +121,23 @@
         <h2 class="mb-4">Financial Data and Fundamental Analysis</h2>
         <p class="mb-4">View quarterly updated earnings and financials statements and use a variety of customizable financial and performance metrics to analyze and rank investments by quality.</p>
         <a href="https://apps.apple.com/us/app/stoccoon/id1523735591" class="btn btn-outline-primary rounded-pill">Try it</a>
+      </div>
+    </div>
+  </div>
+</div>
+
+<div class="page-section no-scroll">
+  <div class="container">
+    <div class="row align-items-center">
+      <div class="col-lg-5 pl-lg-5 wow fadeInUp">
+        <h2 class="mb-4">Track Portfolio Performance</h2>
+        <p class="mb-4">Sync your investment account portfolio and keep track of it's performance. View daily and total gain for every position and see how your account value grows over time.</p>
+        <a href="https://apps.apple.com/us/app/stoccoon/id1523735591" class="btn btn-outline-primary rounded-pill">Try it</a>
+      </div>
+      <div class="col-lg-7 wow fadeIn">
+        <div class="img-place">
+          <img src="../assets/img/promo_bundle4.png" alt="">
+        </div>
       </div>
     </div>
   </div>
